--- a/cfg/lgofnoc/shared/sharedplugins.cfg
+++ b/cfg/lgofnoc/shared/sharedplugins.cfg
@@ -1,5 +1,13 @@
+// Library
+lgofnoc_loadplugin [LIB]left4dhooks.smx
+lgofnoc_loadplugin [LIB]l4d2library.smx
+lgofnoc_loadplugin [LIB]builtinvotes_native.smx
+lgofnoc_loadplugin [LIB]readyup.smx
+lgofnoc_loadplugin [TR]l4d2_skill_detect.smx
+lgofnoc_loadplugin [LIB]navmesh.smx
+lgofnoc_loadplugin [LIB]NavMesh_DirectInfectedSpawn.smx
+
 // SilverShot
-lgofnoc_loadplugin [SilverShot]left4dhooks.smx
 lgofnoc_loadplugin [SilverShot]l4d_skip_intro.smx
 lgofnoc_loadplugin [SilverShot]command_buffer.smx
 lgofnoc_loadplugin [SilverShot]l4d_console_spam.smx
@@ -7,12 +15,6 @@ lgofnoc_loadplugin [SilverShot]l4d2_script_cmd_swap.smx
 lgofnoc_loadplugin [SilverShot]l4d_info_editor.smx
 lgofnoc_loadplugin [SilverShot]l4d_reload_fix.smx
 lgofnoc_loadplugin [SilverShot]l4d_special_infected_limit.smx
-
-// Library
-lgofnoc_loadplugin [TR]l4d2library.smx
-lgofnoc_loadplugin [TR]builtinvotes_native.smx
-lgofnoc_loadplugin [TR]readyup.smx
-lgofnoc_loadplugin [TR]l4d2_skill_detect.smx
 
 // Sourcemod Basic Plugins
 lgofnoc_loadplugin basebans.smx
