--- a/cfg/lgofnoc/tailredcoop/lgofnoc_plugins.cfg
+++ b/cfg/lgofnoc/tailredcoop/lgofnoc_plugins.cfg
@@ -9,6 +9,7 @@
 // General Competitive Plugins
 lgofnoc_loadplugin [TR]tankmanagement.smx
 lgofnoc_loadplugin [TR]hardcoop.smx
+lgofnoc_loadplugin [TR]specialspawner2.smx
 
 // Lgofnoc Plug-in has loaded
 lgofnoc_loadedplugins
