--- a/cfg/lgofnoc/shared/sharedplugins.cfg
+++ b/cfg/lgofnoc/shared/sharedplugins.cfg
@@ -3,9 +3,9 @@ lgofnoc_loadplugin [LIB]left4dhooks.smx
 lgofnoc_loadplugin [LIB]l4d2library.smx
 lgofnoc_loadplugin [LIB]builtinvotes_native.smx
 lgofnoc_loadplugin [LIB]readyup.smx
-lgofnoc_loadplugin [TR]l4d2_skill_detect.smx
+lgofnoc_loadplugin [LIB]l4d2_skill_detect.smx
 lgofnoc_loadplugin [LIB]navmesh.smx
-lgofnoc_loadplugin [LIB]NavMesh_DirectInfectedSpawn.smx
+lgofnoc_loadplugin [LIB]DirectInfectedSpawn.smx
 
 // SilverShot
 lgofnoc_loadplugin [SilverShot]l4d_skip_intro.smx
