--- a/cfg/cfgogl/tailred/confogl.cfg
+++ b/cfg/cfgogl/tailred/confogl.cfg
@@ -75,7 +75,8 @@ lgo_addcvar bhop_except_si_flags 16	// only jockey
 l4d_wlimits_add 3 weapon_smg_silenced weapon_smg
 l4d_wlimits_add 3 weapon_pumpshotgun weapon_shotgun_chrome
 l4d_wlimits_add 1 weapon_pistol_magnum
-l4d_wlimits_add 1 weapon_hunting_rifle weapon_sniper_scout weapon_sniper_awp
+l4d_wlimits_add 1 weapon_sniper_scout
+l4d_wlimits_add 0 weapon_hunting_rifle weapon_sniper_awp
 l4d_wlimits_lock
 
 // [l4d2_melee_shenanigans.smx]
