--- a/cfg/cfgogl/tailredcoop/confogl.cfg
+++ b/cfg/cfgogl/tailredcoop/confogl.cfg
@@ -364,7 +364,8 @@ lgo_addcvar bhop_except_si_flags 16	// only jockey
 
 // [l4d_weapon_limits.smx]
 l4d_wlimits_add 1 weapon_pistol_magnum
-l4d_wlimits_add 1 weapon_hunting_rifle weapon_sniper_scout weapon_sniper_awp
+l4d_wlimits_add 1 weapon_sniper_scout
+l4d_wlimits_add 0 weapon_hunting_rifle weapon_sniper_awp
 l4d_wlimits_lock
 
 // [l4d2_melee_shenanigans.smx]
