--- a/cfg/cfgogl/tailred/shared_cvars.cfg
+++ b/cfg/cfgogl/tailred/shared_cvars.cfg
@@ -122,7 +122,7 @@ lgo_addcvar cssladders_enabled 1
 lgo_addcvar cssladders_allow_m2 0
 lgo_addcvar cssladders_allow_reload 1
 
-// [items_control.smx]
+// [items_remove.smx]
 lgo_addcvar sm_remove_cans 1
 lgo_addcvar sm_remove_propane 1
 lgo_addcvar sm_remove_oxygen 1
