--- a/cfg/cfgogl/tailred/shared_plugins.cfg
+++ b/cfg/cfgogl/tailred/shared_plugins.cfg
@@ -63,6 +63,7 @@ lgo_loadplugin nosaferoomkits.smx
 lgo_loadplugin pill_passer.smx
 lgo_loadplugin ratemonitor.smx
 lgo_loadplugin si_fire_immunity.smx
+lgo_loadplugin starting_pills.smx
 lgo_loadplugin temphealthfix.smx
 
 //----------------------
@@ -99,7 +100,8 @@ lgo_loadplugin specrates.smx
 lgo_loadplugin l4d2_reload_fix.smx
 lgo_loadplugin l4d2_cs_ladders.smx
 lgo_loadplugin spit_gascan_fix.smx
-lgo_loadplugin items_control.smx
+lgo_loadplugin items_remove.smx
+lgo_loadplugin pills_limit.smx
 lgo_loadplugin l4d_saferoom_manager.smx
 lgo_loadplugin l4d2_damage_infected.smx
 lgo_loadplugin l4d2_infected_horde.smx
