--- a/cfg/cfgogl/tailred2v2/confogl.cfg
+++ b/cfg/cfgogl/tailred2v2/confogl.cfg
@@ -44,7 +44,7 @@ lgo_addcvar hunter_pz_claw_dmg 6
 // Plugins //
 // ======= //
 
-// [items_control.smx]
+// [pills_limit.smx]
 lgo_addcvar sm_pills_limit 0
 
 // [nosaferoomkits.smx]
