--- a/cfg/cfgogl/tailredcoop/confogl.cfg
+++ b/cfg/cfgogl/tailredcoop/confogl.cfg
@@ -182,9 +182,10 @@ lgo_addcvar cssladders_enabled 1
 lgo_addcvar cssladders_allow_m2 0
 lgo_addcvar cssladders_allow_reload 1
 
-// [items_control.smx]
+// [pills_limit.smx]
 lgo_addcvar sm_pills_limit -1
 
+// [items_remove.smx]
 lgo_addcvar sm_remove_cans 1
 lgo_addcvar sm_remove_propane 1
 lgo_addcvar sm_remove_oxygen 1
