--- a/cfg/cfgogl/tailred/confogl.cfg
+++ b/cfg/cfgogl/tailred/confogl.cfg
@@ -44,7 +44,7 @@ lgo_addcvar tongue_choke_damage_interval 0.2
 // Plugins //
 // ======= //
 
-// [items_control.smx]
+// [pills_limit.smx]
 lgo_addcvar sm_pills_limit -1
 
 // [nosaferoomkits.smx]
