--- a/cfg/cfgogl/tailred1v1/confogl.cfg
+++ b/cfg/cfgogl/tailred1v1/confogl.cfg
@@ -51,7 +51,7 @@ lgo_addcvar versus_witch_chance_intro 0
 // Plugins //
 // ======= //
 
-// [items_control.smx]
+// [pills_limit.smx]
 lgo_addcvar sm_pills_limit 0
 
 // [nosaferoomkits.smx]
