--- a/cfg/cfgogl/tailred/shared_plugins.cfg
+++ b/cfg/cfgogl/tailred/shared_plugins.cfg
@@ -134,3 +134,5 @@ lgo_loadplugin ghost_warp.smx
 lgo_loadplugin happy.smx
 lgo_loadplugin server_function.smx
 lgo_loadplugin current_hud.smx
+lgo_loadplugin starting_ai_weapon.smx
+lgo_loadplugin starting_weapon.smx
