--- a/cfg/cfgogl/tailredcoop/confogl_plugins.cfg
+++ b/cfg/cfgogl/tailredcoop/confogl_plugins.cfg
@@ -40,7 +40,7 @@ sm plugins unload optional/ghost_warp.smx
 //sm plugins load optional/hardcoop/l4d2_playstats_fixed.smx // Custom fix for coop - stats are reset
 
 // -- misc
-//sm plugins unload optional/l4d_weapon_limits.smx // no weapon limits
+sm plugins unload optional/l4d_weapon_limits.smx // no weapon limits
 
 //-------------------------------------
 // Gameplay loop
