--- a/cfg/cfgogl/tailred/shared_cvars.cfg
+++ b/cfg/cfgogl/tailred/shared_cvars.cfg
@@ -338,8 +338,8 @@ lgo_addcvar sgspread_ring1_factor  2    // Does not affect the actual first ring
 lgo_addcvar sgspread_center_pellet 0
 
 // Common damage settings
-lgo_addcvar z_shotgun_bonus_damage_range 60
-lgo_addcvar z_shotgun_bonus_damage_multiplier 7
+//lgo_addcvar z_shotgun_bonus_damage_range 60
+//lgo_addcvar z_shotgun_bonus_damage_multiplier 7
 
 ///////////////////
 // [Boss tweaks] //
