--- a/cfg/cfgogl/tailred/shared_cvars.cfg
+++ b/cfg/cfgogl/tailred/shared_cvars.cfg
@@ -86,7 +86,7 @@ lgo_addcvar tank_stuck_time_suicide 999999999
 lgo_addcvar director_tank_lottery_selection_time 3
 lgo_addcvar z_frustration_spawn_delay 25
 lgo_addcvar z_frustration_los_delay 1.2
-//lgo_addcvar tankcontrol_print_all 1
+lgo_addcvar tankcontrol_print_all 1
 lgo_addcvar tank_ground_pound_duration 0.1
 
 // Survivor Bot Cvars
