--- a/cfg/cfgogl/tailred/shared_plugins.cfg
+++ b/cfg/cfgogl/tailred/shared_plugins.cfg
@@ -140,6 +140,7 @@ lgo_loadplugin l4d2_hittable_control.smx
 // Matchmaking Plugins
 //---------------------------
 lgo_loadplugin si_class_announce.smx
+lgo_loadplugin l4d_tank_control_eq.smx
 lgo_loadplugin cfg_motd.smx
 lgo_loadplugin l4d_boss_percent.smx
 lgo_loadplugin l4d_boss_vote.smx
