--- a/cfg/cfgogl/tailred/shared_plugins.cfg
+++ b/cfg/cfgogl/tailred/shared_plugins.cfg
@@ -116,6 +116,7 @@ lgo_loadplugin l4d2_damage_infected.smx
 lgo_loadplugin l4d2_horde_equaliser.smx
 lgo_loadplugin nosaferoomkits.smx
 lgo_loadplugin pills_limit.smx
+lgo_loadplugin playermanagement.smx
 lgo_loadplugin server_function.smx
 lgo_loadplugin spit_gascan_fix.smx
 lgo_loadplugin starting_ai_weapon.smx
