--- a/cfg/cfgogl/tailred/shared_plugins.cfg
+++ b/cfg/cfgogl/tailred/shared_plugins.cfg
@@ -14,6 +14,7 @@ lgo_loadplugin blockheatseekingchargers.smx
 lgo_loadplugin bossspawningfix.smx
 lgo_loadplugin current.smx
 lgo_loadplugin finalefix.smx
+lgo_loadplugin l4d2_blind_infected.smx
 lgo_loadplugin l4d2_nobhaps.smx
 lgo_loadplugin l4d2_nospitterduringtank.smx
 lgo_loadplugin l4d2_setscores.smx
@@ -87,8 +88,6 @@ lgo_loadplugin l4d2_cs_ladders.smx
 lgo_loadplugin l4d2_damage_infected.smx
 lgo_loadplugin l4d2_horde_equaliser.smx
 lgo_loadplugin saferoom_item_remove.smx
-lgo_loadplugin spit_gascan_fix.smx
-lgo_loadplugin starting_weapon.smx
 
 //----------------------
 // Static shotgun spread
