--- a/cfg/server_plugins.cfg
+++ b/cfg/server_plugins.cfg
@@ -59,6 +59,9 @@ sm plugins load server/readyup.smx
 sm plugins load server/server_function.smx
 sm plugins load server/server_namer.smx
 sm plugins load server/happy.smx
+sm plugins load server/l4d_reservedslots.smx
+sm plugins load server/l4d_superversus.smx
+sm plugins load server/ACS.smx
 
 // General Fixes.
 sm plugins load fixes/l4d_skip_intro.smx
