--- a/cfg/cfgogl/tailred/confogl_plugins.cfg
+++ b/cfg/cfgogl/tailred/confogl_plugins.cfg
@@ -17,7 +17,7 @@ exec cfgogl/tailred/shared_plugins.cfg
 lgo_loadplugin survivor_mvp.smx
 lgo_loadplugin l4d2_playstats.smx
 lgo_loadplugin l4d2_skill_detect.smx
-lgo_loadplugin autopause.smx
+//lgo_loadplugin autopause.smx
 lgo_loadplugin l4d2_tongue_timer.smx
 
 // Letzzzz go.
