--- a/cfg/cfgogl/tailred/shared_cvars.cfg
+++ b/cfg/cfgogl/tailred/shared_cvars.cfg
@@ -144,6 +144,10 @@ lgo_addcvar l4d2_tank_prop_dissapear_time  10.0
 // [fix_engine.smx]
 lgo_addcvar engine_fix_flags 12
 
+// [panel_text.smx]
+sm_addreadystring " "
+sm_lockstrings
+
 // [checkpoint-rage-control.smx]
 lgo_addcvar crc_global 1
 
