--- a/cfg/cfgogl/tailred/shared_plugins.cfg
+++ b/cfg/cfgogl/tailred/shared_plugins.cfg
@@ -43,7 +43,7 @@ lgo_loadplugin temphealthfix.smx
 //----------------------
 lgo_loadplugin eq_finale_tanks.smx
 lgo_loadplugin l4d2_drop_secondary.smx
-lgo_loadplugin l4d2_m2_control_lite.smx
+lgo_loadplugin l4d2_m2_control_eq[-].smx
 lgo_loadplugin l4d2_nosecondchances.smx
 lgo_loadplugin l4d2_si_staggers.smx
 lgo_loadplugin l4d2_noslowdown.smx
@@ -103,7 +103,7 @@ lgo_loadplugin l4d_info_editor.smx
 //---------------------------------------------
 // Merged FF Plugins, needs to be loaded here
 //---------------------------------------------
-lgo_loadplugin l4d2_godframes_control_merge.smx
+lgo_loadplugin l4d2_godframes_control_merge[-].smx
 lgo_loadplugin l4d2_charger_getup_fix.smx
 lgo_loadplugin l4d2_hittable_control.smx
 
@@ -111,11 +111,13 @@ lgo_loadplugin l4d2_hittable_control.smx
 // Matchmaking Plugins
 //---------------------------
 lgo_loadplugin si_class_announce.smx
-lgo_loadplugin l4d_tank_control_lite.smx
+lgo_loadplugin l4d_tank_control_eq[-].smx
 lgo_loadplugin cfg_motd.smx
 lgo_loadplugin l4d_boss_percent.smx
 lgo_loadplugin l4d_boss_vote.smx
 lgo_loadplugin caster_system.smx
-lgo_loadplugin witch_and_tankifier.smx
+lgo_loadplugin caster_assister.smx
 lgo_loadplugin pause.smx
+lgo_loadplugin panel_text.smx
 lgo_loadplugin spechud.smx
+lgo_loadplugin witch_and_tankifier.smx
