--- a/cfg/cfgogl/tailredcoop/confogl.cfg
+++ b/cfg/cfgogl/tailredcoop/confogl.cfg
@@ -227,6 +227,10 @@ lgo_addcvar l4d2_tank_prop_dissapear_time  10.0
 // [fix_engine.smx]
 lgo_addcvar engine_fix_flags 12
 
+// [panel_text.smx]
+sm_addreadystring " "
+sm_lockstrings
+
 // [si_fire_immunity.smx]
 lgo_addcvar infected_fire_immunity 3
 
