--- a/cfg/cfgogl/tailredcoop/confogl_plugins.cfg
+++ b/cfg/cfgogl/tailredcoop/confogl_plugins.cfg
@@ -33,7 +33,7 @@ lgo_loadplugin temphealthfix.smx
 //----------------------
 lgo_loadplugin eq_finale_tanks.smx
 lgo_loadplugin l4d2_drop_secondary.smx
-lgo_loadplugin l4d2_m2_control_lite.smx
+lgo_loadplugin l4d2_m2_control_eq[-].smx
 lgo_loadplugin l4d2_nosecondchances.smx
 lgo_loadplugin l4d2_si_staggers.smx
 lgo_loadplugin l4d2_noslowdown.smx
@@ -88,7 +88,7 @@ lgo_loadplugin l4d_info_editor.smx
 //---------------------------------------------
 // Merged FF Plugins, needs to be loaded here
 //---------------------------------------------
-lgo_loadplugin l4d2_godframes_control_merge.smx
+lgo_loadplugin l4d2_godframes_control_merge[-].smx
 lgo_loadplugin l4d2_charger_getup_fix.smx
 lgo_loadplugin l4d2_hittable_control.smx
 
@@ -117,6 +117,7 @@ lgo_loadplugin saferoom_gun_spawn.smx
 // Matchmaking Plugins
 //---------------------------
 lgo_loadplugin cfg_motd.smx
+lgo_loadplugin panel_text.smx
 lgo_loadplugin survivor_mvp.smx
 lgo_loadplugin l4d2_playstats.smx
 lgo_loadplugin l4d2_skill_detect.smx
