--- a/cfg/cfgogl/tailred/shared_plugins.cfg
+++ b/cfg/cfgogl/tailred/shared_plugins.cfg
@@ -80,6 +80,7 @@ lgo_loadplugin l4d_saferoom_manager.smx
 lgo_loadplugin l4d_tongue_damage.smx
 lgo_loadplugin l4d2_convar_fix.smx
 lgo_loadplugin l4d2_cs_ladders.smx
+lgo_loadplugin l4d2_unlock_director.smx
 lgo_loadplugin saferoom_gun_spawn.smx
 
 //----------------------
