--- a/cfg/generalfixes.cfg
+++ b/cfg/generalfixes.cfg
@@ -51,6 +51,7 @@ sm plugins load fixes/l4d2_ai_damagefix.smx
 sm plugins load fixes/l4d2_ladderblock.smx
 sm plugins load fixes/FollowTarget_Detour.smx
 sm plugins load optional/nodeathcamskip.smx
+sm plugins load l4d_pause_message.smx
 sm plugins load fixes/l4d2_boomer_shenanigans.smx
 sm plugins load fixes/sv_consistency_fix.smx
 sm plugins load fixes/l4d2_hltv_crash_fix.smx
