--- a/cfg/sourcemod/sourcemod.cfg
+++ b/cfg/sourcemod/sourcemod.cfg
@@ -57,7 +57,7 @@ sm_time_adjustment 0
 // --
 // Requires: antiflood.smx
 // Default: 0.75
-sm_flood_time 0.75
+//sm_flood_time 0.75
 
 // Specifies how the reserved slots plugin operates. Valid values are:
 // 0 : Public slots are used in preference to reserved slots. Reserved slots are freed before public slots.
@@ -81,28 +81,28 @@ sm_reserve_type 0
 // --
 // Requires: reservedslots.smx
 // Default: 0
-sm_reserved_slots 0
+//sm_reserved_slots 0
 
 // Specifies whether or not reserved slots will be hidden (subtracted from max
 // slot count). Valid values are 0 (Visible) or 1 (Hidden).
 // --
 // Requires: reservedslots.smx
 // Default: 0
-sm_hide_slots 0
+//sm_hide_slots 0
 
 // Specifies whether or not non-admins can send messages to admins using
 // say_team @<message>. Valid values are 0 (Disabled) or 1 (Enabled)
 // --
 // Requires: basechat.smx
 // Default: 1
-sm_chat_mode 1
+//sm_chat_mode 1
 
 // Specifies whether or not "timeleft" will automatically be triggered every
 // x seconds. Valid values are 0 (Disabled) to 1800 seconds.
 // --
 // Requires: basetriggers.smx
 // Default: 0
-sm_timeleft_interval 0
+//sm_timeleft_interval 0
 
 // Specifies whether or not chat triggers are broadcast to the server or just
 // the player who requested the info trigger. Valid values are 0 (Disabled) or
@@ -110,7 +110,7 @@ sm_timeleft_interval 0
 // --
 // Requires: basetriggers.smx
 // Default: 0
-sm_trigger_show 0
+//sm_trigger_show 0
 
 // Specifies whether or not to display vote progress to clients in the
 // "hint" box (near the bottom of the screen in most games).
