--- a/cfg/cfgogl/tailred/shared_plugins.cfg
+++ b/cfg/cfgogl/tailred/shared_plugins.cfg
@@ -70,12 +70,14 @@ lgo_loadplugin double_getup.smx
 lgo_loadplugin fix_engine.smx
 lgo_loadplugin l4d2_stats.smx
 lgo_loadplugin l4d2_melee_shenanigans.smx
+lgo_loadplugin l4d2_fix_spawn_order.smx
 lgo_loadplugin l4d2_reload_fix.smx
 
 //--------------
 // Tailred
 //--------------
 lgo_loadplugin extra_remove.smx
+lgo_loadplugin l4d_ammo_spawn.smx
 lgo_loadplugin l4d_saferoom_manager.smx
 lgo_loadplugin l4d_tongue_damage.smx
 lgo_loadplugin l4d2_convar_fix.smx
