--- a/cfg/cfgogl/tailred1v1/confogl.cfg
+++ b/cfg/cfgogl/tailred1v1/confogl.cfg
@@ -29,7 +29,7 @@ lgo_addcvar z_max_player_zombies 1
 lgo_addcvar z_versus_hunter_limit 1
 lgo_addcvar z_versus_boomer_limit 0
 lgo_addcvar z_versus_smoker_limit 0
-lgo_addcvar z_versus_jockey_limit 1
+lgo_addcvar z_versus_jockey_limit 0
 lgo_addcvar z_versus_charger_limit 0
 lgo_addcvar z_versus_spitter_limit 0
 lgo_addcvar z_mega_mob_size 12
@@ -52,6 +52,9 @@ lgo_addcvar jockey_pz_claw_dmg 0
 // [witch_and_tankifier.smx]
 lgo_addcvar sm_tank_can_spawn 0
 lgo_addcvar sm_witch_can_spawn 0
+
+// [l4d2_unlock_director.smx]
+l4d2_directoroptions_overwrite "DisallowThreatType=0;ProhibitBosses=0;TankLimit=0;DominatorLimit=1;MaxSpecials=1;HunterLimit=1;BoomerLimit=0;ChargerLimit=0;JockeyLimit=0;SmokerLimit=0;SpitterLimit=0"
 
 // [l4d2_noslowdown.smx]
 lgo_addcvar z_tank_speed_vs 205
