--- a/cfg/cfgogl/tailred2v2/confogl.cfg
+++ b/cfg/cfgogl/tailred2v2/confogl.cfg
@@ -54,6 +54,9 @@ lgo_addcvar hunter_pz_claw_dmg 6
 lgo_addcvar sm_tank_can_spawn 1
 lgo_addcvar sm_witch_can_spawn 0
 
+// [l4d2_unlock_director.smx]
+l4d2_directoroptions_overwrite "DisallowThreatType=0;ProhibitBosses=0;TankLimit=1;DominatorLimit=2;MaxSpecials=2;HunterLimit=1;BoomerLimit=0;ChargerLimit=1;JockeyLimit=1;SmokerLimit=0;SpitterLimit=0"
+
 // [l4d2_noslowdown.smx]
 lgo_addcvar z_tank_speed_vs 205
 lgo_addcvar z_tank_damage_slow_min_range 0
