--- a/cfg/cfgogl/tailredcoop/confogl.cfg
+++ b/cfg/cfgogl/tailredcoop/confogl.cfg
@@ -15,7 +15,7 @@ lgo_addcvar mp_gamemode "coop"
 lgo_addcvar sv_gametypes "coop"
 
 // Confogl Cvars
-lgo_addcvar confogl_pills_limit 2 // 限制安全室外每张地图上止痛药的数量. -1: 无限制; >=0: 限制为 cvar 值
+lgo_addcvar confogl_pills_limit 4 // 限制安全室外每张地图上止痛药的数量. -1: 无限制; >=0: 限制为 cvar 值
 lgo_addcvar confogl_adrenaline_limit 1 // 限制安全室外每张地图上的肾上腺素数量. -1: 无限制; >=0: 限制为 cvar 值
 
 // Competitive Cvars
@@ -93,6 +93,9 @@ lgo_addcvar sv_rescue_disabled 1
 // [witch_and_tankifier.smx]
 lgo_addcvar sm_tank_can_spawn 1
 lgo_addcvar sm_witch_can_spawn 0
+
+// [l4d2_unlock_director.smx]
+l4d2_directoroptions_overwrite "DisallowThreatType=0;ProhibitBosses=0;TankLimit=1;DominatorLimit=4;MaxSpecials=4;HunterLimit=1;BoomerLimit=1;ChargerLimit=1;JockeyLimit=1;SmokerLimit=1;SpitterLimit=1"
 
 // [l4d2_noslowdown.smx]
 lgo_addcvar z_tank_speed_vs 230
