--- a/cfg/generalfixes.cfg
+++ b/cfg/generalfixes.cfg
@@ -25,6 +25,7 @@ sm plugins load server/cannounce.smx
 sm plugins load server/votemanager2.smx
 sm plugins load server/specnightvision.smx
 sm plugins load server/specrates.smx
+sm plugins load server/spec_listener.smx
 
 // General Fixes.
 sm plugins load fixes/bequiet.smx
@@ -57,6 +58,8 @@ sm plugins load fixes/sv_consistency_fix.smx
 sm plugins load fixes/l4d2_hltv_crash_fix.smx
 sm plugins load fixes/l4d_checkpoint_rock_patch.smx
 sm plugins load fixes/l4d_backjump_fix.smx
+sm plugins load fixes/l4d_tongue_float_fix.smx
+sm plugins load fixes/spray_exploit_fixer.smx
 
 // Anti-Cheat.
 sm plugins load anticheat/l4d2_noghostcheat.smx
