--- a/cfg/server1.cfg
+++ b/cfg/server1.cfg
@@ -7,11 +7,11 @@
 sn_host_num 1
 
 //sm_cvar sv_region 4				//地区代码: 0 - 美国东海岸, 1 - 美国西海岸, 2 - 南美洲, 3 - 欧洲, 4 - 亚洲, 5 - 澳大利亚, 6 - 中东, 7 - 非洲, 255 - 世界
-//sm_cvar sv_tags hidden
+sm_cvar sv_tags hidden
 rcon_password "你知道这里的密码"        	 // Rcon密码，主要用于远程访问。
 sv_steamgroup "6932406,7066658,21857674"
 sv_search_key ""
-sv_steamgroup_exclusive 0              // 如果设置为1，只有Steam组的成员才能加入服务器，只有当服务器有玩家时，公众才可以加入服务器。
+sv_steamgroup_exclusive 1              // 如果设置为1，只有Steam组的成员才能加入服务器，只有当服务器有玩家时，公众才可以加入服务器。
                                          // (强制IP作为大厅中的非组成员，或直接连接始终有效)
 										 
 motdfile "mymotd.txt"                    // 这确保了Valve不会覆盖MoTD的每个更新。      [Edit this file instead of motd.txt, found in the same folder (/left4dead2)]
