--- a/cfg/cfgogl/tailred3v3/confogl.cfg
+++ b/cfg/cfgogl/tailred3v3/confogl.cfg
@@ -60,6 +60,9 @@ lgo_addcvar tongue_choke_damage_interval 0.2
 lgo_addcvar sm_tank_can_spawn 1
 lgo_addcvar sm_witch_can_spawn 0
 
+// [l4d2_unlock_director.smx]
+l4d2_directoroptions_overwrite "DisallowThreatType=0;ProhibitBosses=0;TankLimit=1;DominatorLimit=3;MaxSpecials=3;HunterLimit=1;BoomerLimit=0;ChargerLimit=1;JockeyLimit=1;SmokerLimit=1;SpitterLimit=0"
+
 // [l4d2_noslowdown.smx]
 lgo_addcvar z_tank_speed_vs 205
 lgo_addcvar z_tank_damage_slow_min_range 0
