--- a/addons/sourcemod/configs/core.cfg
+++ b/addons/sourcemod/configs/core.cfg
@@ -52,7 +52,7 @@
 	 * Password setinfo key that clients must set.  You must change this in order for
 	 * passwords to work, for security reasons.
 	 */
-	"PassInfoVar"			"_password"
+	"PassInfoVar"			"_123"
 	
 	/**
 	 * Specifies the sound that gets played when an item is selected from a menu.
