--- a/cfg/cfgogl/tailred/shared_cvars.cfg
+++ b/cfg/cfgogl/tailred/shared_cvars.cfg
@@ -44,7 +44,6 @@ lgo_addcvar confogl_enable_itemtracking         "1"             // 启用 itemtr
 lgo_addcvar confogl_itemtracking_mapspecific    "3"             // 允许 ConVar 限制被 mapinfo.txt 限制覆盖
 lgo_addcvar confogl_pipebomb_limit              "0"             // 限制安全室外每张地图上的土制炸弹数量. -1: 无限制; >=0: 限制为 cvar 值
 lgo_addcvar confogl_molotov_limit               "0"             // 限制安全室外每张地图上的燃烧瓶数量. -1: 无限制; >=0: 限制为 cvar 值
-lgo_addcvar confogl_vomitjar_limit              "0"             // 限制安全室外每张地图上的胆汁炸弹数量. -1: 无限制; >=0: 限制为 cvar 值
 
 // Balancing Cvars
 lgo_addcvar director_vs_convert_pills 0
@@ -81,22 +80,29 @@ lgo_addcvar z_jockey_speed 275
 lgo_addcvar tongue_release_fatigue_penalty 0
 lgo_addcvar z_gun_survivor_friend_push 0
 lgo_addcvar z_respawn_interval 20
-lgo_addcvar sb_max_team_melee_weapons 4
 lgo_addcvar z_charge_warmup 0
 lgo_addcvar z_jockey_min_mounted_speed 0.68
-lgo_addcvar charger_pz_claw_dmg 7
+lgo_addcvar charger_pz_claw_dmg 8
 lgo_addcvar z_max_hunter_pounce_stagger_duration 1
 
+// 肾上腺素
 lgo_addcvar adrenaline_duration 10
 lgo_addcvar adrenaline_health_buffer 25
 lgo_addcvar adrenaline_revive_speedup 0.7
 lgo_addcvar adrenaline_run_speed 220
+
+// 胆汁
+lgo_addcvar vomitjar_duration_infected_pz 8
+lgo_addcvar vomitjar_duration_infected_bot 10
+lgo_addcvar vomitjar_duration_survivor 10
+lgo_addcvar vomitjar_radius_survivors 110
 
 // AI Improvement Cvars
 lgo_addcvar boomer_exposed_time_tolerance 0.2
 lgo_addcvar boomer_vomit_delay 0.1
 lgo_addcvar hunter_pounce_ready_range 1000
 lgo_addcvar hunter_committed_attack_range 600
+lgo_addcvar sb_max_team_melee_weapons 4
 
 // Tank/Witch Cvars
 lgo_addcvar versus_tank_flow_team_variation 0
@@ -160,6 +166,9 @@ lgo_addcvar versus_witch_chance_intro 0
 
 // [l4d_bash_kills.smx]
 lgo_addcvar l4d_no_bash_kills 1
+
+// [l4d_ci_ffblock.smx]
+lgo_addcvar common_hits 2
 
 // [double_getup.smx]
 lgo_addcvar longer_tank_punch_getup 1
@@ -230,9 +239,10 @@ lgo_addcvar gfc_godframe_glows 1
 lgo_addcvar gfc_ff_min_time 0.8
 
 // [l4d2_uniform_spit.smx]
-lgo_addcvar l4d2_spit_dmg 3	// 吐口水造成的每一刻伤害. -1 跳过伤害调整
-lgo_addcvar l4d2_spit_max_ticks 24  // 最高 28
-lgo_addcvar l4d2_spit_godframe_ticks 6 // 纯净值 8
+lgo_addcvar l4d2_spit_dmg 2
+lgo_addcvar l4d2_spit_alternate_dmg 3
+lgo_addcvar l4d2_spit_max_ticks 26
+lgo_addcvar l4d2_spit_godframe_ticks 6
 
 // [l4d2_hittable_control.smx]
 lgo_addcvar hc_gauntlet_finale_multiplier 0.25
