--- a/cfg/cfgogl/tailred/shared_plugins.cfg
+++ b/cfg/cfgogl/tailred/shared_plugins.cfg
@@ -24,6 +24,7 @@ lgo_loadplugin l4d2_spec_stays_spec.smx
 lgo_loadplugin l4d2_unsilent_jockey.smx
 lgo_loadplugin l4d2_weaponrules.smx
 lgo_loadplugin l4d_bash_kills.smx
+lgo_loadplugin l4d_ci_ffblock.smx 
 lgo_loadplugin l4d_equalise_alarm_cars.smx
 lgo_loadplugin l4d_jockey_ledgehang.smx
 lgo_loadplugin l4d_pounceprotect.smx
