--- a/cfg/cfgogl/tailred2v2/confogl.cfg
+++ b/cfg/cfgogl/tailred2v2/confogl.cfg
@@ -16,6 +16,7 @@ lgo_addcvar mp_gamemode "versus"
 lgo_addcvar sv_gametypes "versus"
 
 // Confogl Cvars
+lgo_addcvar confogl_vomitjar_limit 0 // 限制安全室外每张地图上的胆汁炸弹数量. -1: 无限制; >=0: 限制为 cvar 值
 lgo_addcvar confogl_pills_limit 0 // 限制安全室外每张地图上止痛药的数量. -1: 无限制; >=0: 限制为 cvar 值
 lgo_addcvar confogl_adrenaline_limit 0 // 限制安全室外每张地图上的肾上腺素数量. -1: 无限制; >=0: 限制为 cvar 值
 
@@ -69,7 +70,6 @@ lgo_addcvar tankgank_killoncrash 1
 lgo_addcvar l4d_global_percent 0
 lgo_addcvar l4d_tank_percent 1
 lgo_addcvar l4d_witch_percent 0
-lgo_addcvar l4d_boss_vote 1
 
 // [l4d_mapbased_cvars.smx]
 l4d_mapcvars_configdir tailred2v2
