--- a/cfg/cfgogl/tailred/confogl.cfg
+++ b/cfg/cfgogl/tailred/confogl.cfg
@@ -16,6 +16,7 @@ lgo_addcvar mp_gamemode "versus"
 lgo_addcvar sv_gametypes "versus"
 
 // Confogl Cvars
+lgo_addcvar confogl_vomitjar_limit 1 // 限制安全室外每张地图上的胆汁炸弹数量. -1: 无限制; >=0: 限制为 cvar 值
 lgo_addcvar confogl_pills_limit 4 // 限制安全室外每张地图上止痛药的数量. -1: 无限制; >=0: 限制为 cvar 值
 lgo_addcvar confogl_adrenaline_limit 1 // 限制安全室外每张地图上的肾上腺素数量. -1: 无限制; >=0: 限制为 cvar 值
 
@@ -26,6 +27,7 @@ lgo_addcvar z_finale_spawn_safety_range 600                     // Tank finale b
 lgo_addcvar z_common_limit 30
 lgo_addcvar survivor_limit 4
 lgo_addcvar z_max_player_zombies 4
+lgo_addcvar z_versus_hunter_limit 2
 lgo_addcvar z_ghost_delay_min 16
 lgo_addcvar z_ghost_delay_max 16
 lgo_addcvar z_mega_mob_size 50
@@ -54,7 +56,7 @@ lgo_addcvar sm_tank_can_spawn 1
 lgo_addcvar sm_witch_can_spawn 0
 
 // [l4d2_unlock_director.smx]
-l4d2_directoroptions_overwrite "DisallowThreatType=0;ProhibitBosses=0;TankLimit=1;DominatorLimit=3;MaxSpecials=4;HunterLimit=1;BoomerLimit=1;ChargerLimit=1;JockeyLimit=1;SmokerLimit=1;SpitterLimit=1"
+l4d2_directoroptions_overwrite "DisallowThreatType=0;ProhibitBosses=0;TankLimit=1;DominatorLimit=3;MaxSpecials=4;HunterLimit=2;BoomerLimit=1;ChargerLimit=1;JockeyLimit=1;SmokerLimit=1;SpitterLimit=1"
 
 // [l4d2_noslowdown.smx]
 lgo_addcvar z_tank_speed_vs 205
@@ -68,7 +70,6 @@ lgo_addcvar tankgank_killoncrash 0
 lgo_addcvar l4d_global_percent 0
 lgo_addcvar l4d_tank_percent 1
 lgo_addcvar l4d_witch_percent 0
-lgo_addcvar l4d_boss_vote 1
 
 // [l4d2_tongue_timer.smx]
 lgo_addcvar l4d2_tongue_delay_tank 8.0
