--- a/cfg/cfgogl/tailred/shared_cvars.cfg
+++ b/cfg/cfgogl/tailred/shared_cvars.cfg
@@ -330,6 +330,7 @@ lgo_addcvar sgspread_center_pellet 0
 
 // Reserve Ammo
 lgo_addcvar ammo_shotgun_max 80
+lgo_addcvar ammo_smg_max 700
 
 ///////////////////
 // [Boss tweaks] //
